src/test/resources/tags/importtag/errors/include.jinja
{% set foo = "asdfas" %}





{% include "tags/importtag/errors/base.jinja" %}
